--- a/build.gradle
+++ b/build.gradle
@@ -31,17 +31,17 @@ configurations {
 }
 
 dependencies {
-  compile 'com.xebialabs.overthere:overthere:2.1.0-beta-1'
-  compile 'com.google.guava:guava:12.0'
-  compile 'org.apache.httpcomponents:httpclient:4.2.1'
-  compile 'org.apache.httpcomponents:httpcore:4.2.1'
-  compile 'org.codehaus.jackson:jackson-core-asl:1.9.9'
-  testCompile 'org.testng:testng:5.14.10'
-  testCompile 'org.hamcrest:hamcrest-core:1.2.1'
-  testCompile('com.xebialabs.cloud:overcast:1.1.1') {
+  compile 'com.xebialabs.overthere:overthere:2.4.2'
+  compile 'com.google.guava:guava:16.0.1'
+  compile 'org.apache.httpcomponents:httpclient:4.3.3'
+  compile 'org.apache.httpcomponents:httpcore:4.3.2'
+  compile 'org.codehaus.jackson:jackson-core-asl:1.9.13'
+  testCompile 'org.testng:testng:6.8.8'
+  testCompile 'org.hamcrest:hamcrest-core:1.3'
+  testCompile('com.xebialabs.cloud:overcast:1.1.7') {
     exclude group: 'org.codehaus.jackson', module: 'jackson-core-asl'
   }
-  testCompile 'ch.qos.logback:logback-classic:1.0.6'
+  testCompile 'ch.qos.logback:logback-classic:1.1.2'
 }
 
 task sourcesJar(type: Jar) {
